--- a/.env
+++ b/.env
@@ -1,9 +1,20 @@
-#PUERTO
-PORT = 3000
+# PUERTO
+PORT = 3000  # Define el puerto en el que el servidor escuchará las solicitudes. En este caso, el servidor escuchará en el puerto 3000.
+
+BACKEND_URL=http://localhost:3000
 
 # BASE DE DATOS
-MYSQLHOST = "localhost"
-MYSQLPORT = 3306
-MYSQLUSER = "root"
-MYSQLPASSWORD = ""
-MYSQLDATABASE = "restaurante"  
+MYSQLHOST = "localhost"  # Especifica la dirección del servidor de la base de datos MySQL. En este caso, está configurado para conectarse a un servidor local.
+
+MYSQLPORT = 3306  # Define el puerto en el que el servidor MySQL está escuchando. El puerto por defecto para MySQL es 3306.
+
+MYSQLUSER = "root"  # Especifica el nombre de usuario para la conexión a la base de datos MySQL. En este caso, es el usuario por defecto 'root'.
+
+MYSQLPASSWORD = ""  # Define la contraseña para el usuario de la base de datos MySQL. Está vacío en este ejemplo, lo que significa que no hay contraseña configurada.
+
+MYSQLDATABASE = "restaurante"  # Especifica el nombre de la base de datos MySQL a la que se conectará la aplicación. En este caso, se conecta a la base de datos llamada 'restaurante'.
+
+# PASSWORD
+BCRYPT_SALT_ROUNDS=2
+TOKEN_PRIVATEKEY= marinela  # Llave secreta para firmar el token
+TOKEN_EXPIRES_IN= 1h    # Tiempo de expiración del token
